fixed sounds and setup config for malicious scythe hits, and for future refrence
(and subtitle lang)

--- a/src/main/resources/assets/gobsarmory/lang/en_us.json
+++ b/src/main/resources/assets/gobsarmory/lang/en_us.json
@@ -1,5 +1,7 @@
 {
   "item.gobsarmory.malicious_scythe": "§2Malicious Scythe",
 
+
+  "subtitles.pixel_scythe": "Game Over",
   "creativetab.gobsarmory_tab": "Gob's Armory"
 }
