--- a/src/main/resources/assets/gobsarmory/lang/en_us.json
+++ b/src/main/resources/assets/gobsarmory/lang/en_us.json
@@ -1,5 +1,7 @@
 {
-  "item.gobsarmory.malicious_scythe": "§2Malicious Scythe",
+  "item.gobsarmory.malicious_scythe": "Malicious Scythe",
+  "item.gobsarmory.ion_cube": "Ion Cube",
+  "item.gobsarmory.corrupt_circuit": "Corrupt Circuit",
 
 
   "subtitles.pixel_scythe": "Game Over",
