added new weapons, cybernetic cleaver, quantum axe, hyperwave bow
cybernetic cleaver is mostly complete with a new effect registered for it

textures for ion cube and corrupt circuit added

crafting recipes added for new items as well

--- a/src/main/resources/assets/gobsarmory/lang/en_us.json
+++ b/src/main/resources/assets/gobsarmory/lang/en_us.json
@@ -1,8 +1,12 @@
 {
   "item.gobsarmory.malicious_scythe": "Malicious Scythe",
+  "item.gobsarmory.cybernetic_cleaver": "Cybernetic Cleaver",
+  "item.gobsarmory.quantum_axe": "Quantum Axe",
+  "item.gobsarmory.hyperwave_bow": "Hyperwave Bow",
   "item.gobsarmory.ion_cube": "Ion Cube",
   "item.gobsarmory.corrupt_circuit": "Corrupt Circuit",
 
+  "effect.gobsarmory.glitched": "Glitched",
 
   "subtitles.pixel_scythe": "Game Over",
   "creativetab.gobsarmory_tab": "Gob's Armory"
