--- a/src/main/resources/assets/gobsarmory/lang/en_us.json
+++ b/src/main/resources/assets/gobsarmory/lang/en_us.json
@@ -6,7 +6,7 @@
   "item.gobsarmory.ion_cube": "Ion Cube",
   "item.gobsarmory.corrupt_circuit": "Corrupt Circuit",
 
-  "effect.gobsarmory.glitched": "Glitched",
+  "effect.gobsarmory.bugged": "Bugged",
 
   "subtitles.pixel_scythe": "Game Over",
   "creativetab.gobsarmory_tab": "Gob's Armory"
