Reworked loot table method to improve consistency
Organized code, move tiers to their own class

Added a new weapon the Voidstep Piercer

Added new rarity for ender tier weapons

Tweaked the malicious scythe hit count overlay

--- a/src/main/resources/assets/gobsarmory/lang/en_us.json
+++ b/src/main/resources/assets/gobsarmory/lang/en_us.json
@@ -4,6 +4,7 @@
   "item.gobsarmory.quantum_axe": "Quantum Axe",
   "item.gobsarmory.hyperwave_bow": "Hyperwave Bow",
   "item.gobsarmory.ion_cube": "Ion Cube",
+  "item.gobsarmory.voidstep_piercer": "Voidstep Piercer",
   "item.gobsarmory.corrupt_circuit": "Corrupt Circuit",
 
   "effect.gobsarmory.bugged": "Bugged",
