Tweaked some config options
Made the attack damage tooltip always appear before the attack speed tooltip

Added tooltips for the Voidstep Piercer

Made the voidstep piercers projectile keep chunks loaded to allow long ranged teleports

--- a/src/main/resources/assets/gobsarmory/lang/en_us.json
+++ b/src/main/resources/assets/gobsarmory/lang/en_us.json
@@ -7,6 +7,9 @@
   "item.gobsarmory.voidstep_piercer": "Voidstep Piercer",
   "item.gobsarmory.corrupt_circuit": "Corrupt Circuit",
 
+  "tooltip.gobsarmory.voidstep_piercer.lore": "Void infused trident from the depths of the end",
+  "tooltip.gobsarmory.voidstep_piercer.teleport": "Allows teleportation and grants a buff when teleported",
+
   "effect.gobsarmory.bugged": "Bugged",
 
   "subtitles.pixel_scythe": "Game Over",
